fixed spacing, renamed a variable, moved the table of contents out of the FAQ DL

--- a/css/research-forum/faq.css
+++ b/css/research-forum/faq.css
@@ -4,10 +4,9 @@ ol#toc {
 }
 
 dt {
-	margin-bottom: 2em;
   font-weight: bold;
 }
 
 dd {
-  margin: 1em;
+  margin: 1em 1em 2em 1em;
 }
